--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +15,20 @@
     "axios": "^1.3.4",
     "vue": "^2.7.14",
     "vue-router": "^3.6.5",
-    "vuex": "^3.6.2",
-    "webpack": "^5.75.0"
+    "vuex": "^3.6.2"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.1.0",
+    "style-loader": "^3.3.1",
+    "svg-sprite-loader": "^6.0.11",
+    "vue-loader": "^15.10.0",
+    "vue-loader-plugin": "^1.3.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
