--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,9 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
     "less-loader": "^11.1.0",
+    "lint-staged": "^13.2.0",
     "style-loader": "^3.3.1",
     "svg-sprite-loader": "^6.0.11",
     "vue-loader": "^15.10.0",
@@ -30,5 +33,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": "npx eslint --fix"
   }
 }
